# ollamaagent

./: .env  .gitignore  AGENT_COMMANDS.md  AGENT_COMMANDS_LOCAL.md  README-OLLamaAgent.md  README.md  debug_veeam_class.py  juniper_mcp_server.py  main.py  nsxt_mcp_server.py  pyproject.toml  test_veeam_conn.py  test_zabbix_search.py  warzem_api.py
.github/workflows/: ci.yml  release-pypi.yml
mcp_servers/hyperv/: hyperv_mcp_server.py  test_hyperv_conn.py
mcp_servers/icewarp/: icewarp_mcp_server.py
mcp_servers/juniper/: juniper_mcp_server.py
mcp_servers/storage/: pure_storage_mcp_server.py  storage_snmp_mcp_server.py
mcp_servers/veeam/: veeam_mcp_server.py
mcp_servers/vmware/: env.example  package-lock.json  requirements.txt
ollama_agent/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py
ollama_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: maintain_main_local.py
tests/: test_agent_init.py  test_client.py
tests/integration/: test_ollama_cli_interactive.py
tools/: merge_and_cleanup_main.sh
vmware-vsphere-mcp-server/: Dockerfile  README.md  docker-compose.yml
vmware-vsphere-mcp-server/src/vsphere_mcp_server/: credentials.py  server.py  vsphere_client.py
warzem/: app.vue  nuxt.config.ts  package-lock.json  package.json
zabbix_ai_analyzer/: __init__.py
zabbix_ai_analyzer/ai/: __init__.py  ollama_client.py  prompts.py
zabbix_ai_analyzer/collector/: __init__.py  zabbix_hosts.py  zabbix_metrics.py  zabbix_problems.py
zabbix_ai_analyzer/core/: analyzer.py
